--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <h1> Tóta Kolbeinsdóttir </h1>
 
+<table border="1" style="width:100%;">
+	<tr>
+		<td>A</td>
+		<td>B</td>
+	</tr>
+	<tr>
+		<td>C</td>
+		<td>D</td>
+	</tr>
+</table>
 Velkomin á síðuna mína
